Fix mobile icon in device list not being center aligned

--- a/less/stylesheets/sections/modal.less
+++ b/less/stylesheets/sections/modal.less
@@ -137,6 +137,7 @@
 
 .deviceIcon {
   font-size: 24pt;
+  text-align: center;
 }
 
 .deviceTitle {
